def secrets = System.getenv("GOOGLE_SERVICES_JSON")

apply plugin: "com.android.application"
apply plugin: "kotlin-android"
apply plugin: "com.google.gms.google-services"
apply plugin: "com.google.firebase.crashlytics"

android {
    compileSdk = 36

    def gitCommitHash = "git rev-parse HEAD".execute().text.trim()
    def shortCommitHash = "git rev-parse --short HEAD".execute().text.trim()

    defaultConfig {
        applicationId = "pro.sketchware"
        namespace = "pro.sketchware"
        //noinspection ExpiredTargetSdkVersion since we don't target getting Sketchware Neo on Google Play.
        targetSdk = 28
        minSdk = 26
        versionCode = 158
        versionName = "v7.0.0"

        buildConfigField("String", "GIT_HASH", "\"${gitCommitHash}\"")

        buildConfigField("String", "SKETCHUB_API_KEY", "\"${System.getenv("SKETCHUB_API_KEY")}\"")
    }

    buildTypes {
        release {
            minifyEnabled = false
            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
            signingConfig = signingConfigs.debug
        }
    }

    packagingOptions {
        resources.excludes += "license/*"
        resources.excludes += "META-INF/DEPENDENCIES"
        
        // Excludes required by Google API Client to avoid build errors
        resources.excludes += "META-INF/LICENSE"
        resources.excludes += "META-INF/LICENSE.txt"
        resources.excludes += "META-INF/license.txt"
        resources.excludes += "META-INF/NOTICE"
        resources.excludes += "META-INF/NOTICE.txt"
        resources.excludes += "META-INF/notice.txt"
        
        resources.pickFirsts += "api_database/*"
    }

    compileOptions {
        coreLibraryDesugaringEnabled = true
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    kotlinOptions {
        jvmTarget = "17"
    }

    androidResources {
        additionalParameters.addAll("--stable-ids", "${rootDir}/public-stable-ids.txt")
    }

    signingConfigs {
        debug {
            storeFile = file("../testkey.keystore")
            storePassword = "testkey"
            keyAlias = "testkey"
            keyPassword = "testkey"
        }
    }

    buildFeatures {
        viewBinding = true
        buildConfig = true
    }

    configurations.implementation {
        exclude group: 'javax.inject', module: 'javax.inject'
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-compiler-embeddable"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-common"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-jvm"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-script-runtime"
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])

    implementation libs.bundles.ui

    implementation libs.bundles.image

    implementation platform(libs.sora.editor)
    implementation libs.bundles.editor.and.lang

    implementation libs.bundles.coil

    implementation libs.bundles.bundletool
    implementation(libs.sdklib) {
        exclude group: "com.intellij", module: "annotations"
    }

    implementation libs.bundles.shrinker
    implementation libs.zipalign.java

    implementation libs.gson
    implementation libs.scpkix.jdk15on

    implementation libs.markwon

    implementation libs.bundles.networking

    implementation libs.ecj
    implementation libs.stax.api

    implementation libs.bundles.kotlin.compiler
    compileOnly libs.kotlin.compiler

    implementation libs.dependencyresolver
    implementation libs.filepicker

    implementation libs.libsu
    implementation libs.insetter

    implementation(libs.javaparser.symbol.solver) {
        exclude group: "com.google.guava", module: "guava"
    }

    implementation platform(libs.firebase.bom)
    implementation libs.bundles.firebase
    
    implementation libs.bundles.googleDrive

    implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'

    // Real PTY terminal (Termux terminal-view / terminal-emulator) — resolved via the
    // JitPack repo already declared in settings.gradle. Building straight from termux-app's
    // own terminal-view/terminal-emulator subprojects, not a Maven Central release.
    implementation 'com.github.termux.termux-app:terminal-view:v0.118.0'
    implementation 'com.github.termux.termux-app:terminal-emulator:v0.118.0'

    coreLibraryDesugaring libs.desugar.jdk.libs.nio
}

tasks.register('createMockGoogleServices') {
    doLast {
        if (secrets != null) {
            new File("$projectDir/google-services.json").text = secrets
            return
        }
        def mockFile = file("src/debug/google-services.json")
        if (!mockFile.exists()) {
            mockFile.parentFile.mkdirs()
            def mockContent = """{
  "project_info": {
    "project_number": "699054295113",
    "firebase_url": "https://fir-85c05-default-rtdb.firebaseio.com",
    "project_id": "fir-85c05",
    "storage_bucket": "fir-85c05.appspot.com"
  },
  "client": [
    {
      "client_info": {
        "mobilesdk_app_id": "1:699054295113:android:81451b27e590924c9dd798",
        "android_client_info": {
          "package_name": "pro.sketchware"
        }
      },
      "oauth_client": [
        {
          "client_id": "699054295113-8u595l73bkmosskb83iisds38hck3bck.apps.googleusercontent.com",
          "client_type": 3
        }
      ],
      "api_key": [
        {
          "current_key": "AIzaSyDa2BRkuxLaN__OXLGAe0qVZqFT9hBgSJQ"
        }
      ],
      "services": {
        "appinvite_service": {
          "other_platform_oauth_client": [
            {
              "client_id": "699054295113-8u595l73bkmosskb83iisds38hck3bck.apps.googleusercontent.com",
              "client_type": 3
            }
          ]
        }
      }
    }
  ],
  "configuration_version": "1"
}"""
            mockFile.text = mockContent
        }
    }
}

preBuild.dependsOn createMockGoogleServices